deploy/minio/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: harbor-minio
    component: minio
  name: harbor-minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: harbor-minio
      component: minio
  template:
    metadata:
      labels:
        app: harbor-minio
        component: minio
    spec:
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        args:
        - server
        - /data
        - --console-address
        - :9001
        ports:
        - containerPort: 9000
          name: api
        - containerPort: 9001
          name: console
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          limits:
            cpu: "2"
            memory: 2Gi
          requests:
            cpu: 250m
            memory: 512Mi
        volumeMounts:
        - mountPath: /data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: harbor-minio
