deploy/minio/base/api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: harbor-minio
    component: minio
  name: harbor-minio-api
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 9000
  to:
    kind: Service
    name: harbor-minio
    weight: 100
  wildcardPolicy: None
